# gpt

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: model_100m.yaml  train.yaml
scripts/: benchmark_throughput.py  eval.py  filters.py  gutenberg.py  ls.py  prepare_data.py  sample_data.py  scan_bins.py  tokenizer_repl.py  train.py  train_tokenizer.py
tokenizer/: spm.model  spm.vocab  tokenizer_meta.json
